--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -53,7 +53,6 @@
 
     <!--    </div>-->
 </div>
-</div>
 
 <div class="section">
     <div class="task">
@@ -63,11 +62,12 @@
     <i class="fa fa-keyboard-o" style="font-size:36px"></i>
     <br>
     <form>
-        <textarea></textarea>
+        <label>
+            <textarea></textarea>
+        </label>
     </form>
     <br>
     <input class="submit" type="submit" value="Speichern">
-</div>
 </div>
 
 <div class="chapter">
@@ -88,6 +88,7 @@
                 weil wir im Dunkeln nicht sehen können.
             </div>
         </div>
+    </div>
 
         <div class="section">
             <div class="text">
@@ -127,7 +128,7 @@
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
             </div>
             <div class="section">
@@ -156,7 +157,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <div class="chapter">
     <div class="section">
