- Auge jetzt mit Target

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -90,73 +90,75 @@
         </div>
     </div>
 
+    <div class="section">
+        <div class="text">
+            <button class="reading">Vorlesen</button>
+            <br>
+            Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
+            die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
+            auch
+            den
+            weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
+            bezeichnet.
+        </div>
+    </div>
+    <div class="section">
+        <div class="task">
+            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
+            Lederhaut</b>
+            <!--TODO: Wie werden Begriffe platziert?        -->
+        </div>
+        <div class="task-image">
+            <img src="../../testImages/Auge_Groß.png" alt=""/>
+        </div>
+    </div>
+    <br>
+    <div class="information">
         <div class="section">
             <div class="text">
-                <button class="reading">Vorlesen</button>
-                <br>
-                Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
-                die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
-                auch
-                den
-                weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
-                bezeichnet.
+                <label style="font-size: 54px">&#128161</label>
+                Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
+                erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+            </div>
+        </div>
+        <div class="diashow-target" id="diashow1">
+            <img class="image-series" src="../../testImages/Aufbau_Auge.png"/>
+            <!--        TODO: Beschriftung entfernen in diesem Bild-->
+            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+        </div>
+        <div class="section">
+            <div class="diashow-image" target="diashow1">
+                <img src="../../testImages/Aufbau_Auge.png"/>
             </div>
         </div>
         <div class="section">
-            <div class="task">
-                Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
-                Lederhaut</b>
-                <!--TODO: Wie werden Begriffe platziert?        -->
-            </div>
-            <div class="task-image">
-                <img src="../../testImages/Auge_Groß.png" alt=""/>
+            <div class="text">
+                In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
             </div>
         </div>
-        <br>
-        <div class="information">
-            <div class="section">
-                <div class="text">
-                    <label style="font-size: 54px">&#128161</label>
-                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
-                    erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
-                </div>
-            </div>
-            <div class="diashow">
-                <img class="image-series" src="../../testImages/Aufbau_Auge.png"/>
-                <!--        TODO: Beschriftung entfernen in diesem Bild-->
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
-                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
-                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
-                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-            </div>
-            <div class="section">
-                <img src="../../testImages/Aufbau_Auge.png"/>
-            </div>
-            <div class="section">
-                <div class="text">
-                    In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
-                </div>
-            </div>
 
-            <div class="section">
-                <div class="text">
-                    Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
-                    können.
-                </div>
+        <div class="section">
+            <div class="text">
+                Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
+                können.
             </div>
+        </div>
 
-            <div class="section">
-                <div class="text">
-                    Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
-                    Sehnerv
-                    an
-                    das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
-                </div>
+        <div class="section">
+            <div class="text">
+                Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
+                Sehnerv
+                an
+                das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
             </div>
         </div>
     </div>
+</div>
 
 <div class="chapter">
     <div class="section">
@@ -192,7 +194,8 @@
             <button class="reading">Vorlesen</button>
             <br>
             Auch das Licht der Taschenlampe breitet sich geradlinig aus. Alles, was Tim nicht mit dem Lichtstrahl
-            anleuchtet, kann er nicht sehen. Die Gegenstände, die von der Taschenlampe angestrahlt werden, werfen das
+            anleuchtet, kann er nicht sehen. Die Gegenstände, die von der Taschenlampe angestrahlt werden, werfen
+            das
             Licht
             zurück. Dieses Zurückwerfen des Lichts nennt man Reflexion. Aus dem Grund kann Tim zum Beispiel seine
             Zimmertür
@@ -213,7 +216,8 @@
         <div class="section">
             <div class="text">
                 <label style="font-size: 54px">&#128161</label>
-                Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren
+                Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht
+                reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
             </div>
         </div>
