- removed unnecessary html/css classes

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -122,13 +122,13 @@
             </div>
         </div>
         <div class="diashow-target" id="diashow1">
-            <img class="image-series" src="../../testImages/Aufbau_Auge.png"/>
+            <img src="../../testImages/Aufbau_Auge.png"/>
             <!--        TODO: Beschriftung entfernen in diesem Bild-->
-            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
             <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
             <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-            <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
             <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
         </div>
         <div class="section">
