--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -116,7 +116,7 @@
     <div class="information">
         <div class="section">
             <div class="text">
-                <label style="font-size: 54px">&#128161</label>
+                <img src="../../testImages/lightbulb.png" style="max-width: 5%" ></img>
                 Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                 erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
             </div>
