--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -116,7 +116,7 @@
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" style="max-width: 3%" >
+                <img src="../../testImages/lightbulb.png" style="max-width: 3%">
                 Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                 erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
             </div>
@@ -177,7 +177,8 @@
     <div class="information">
         <div class="section">
             <div class="text wrap-text">
-                <img src="../../testImages/lightbulb.png" style="max-width: 3%" >                Licht breitet sich immer geradlinig aus.<br>
+                <img src="../../testImages/lightbulb.png" style="max-width: 3%; height: 3%" >
+                Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
                 <img class="wrap-figure" src="../../testImages/Wald.png" alt="1"/>
@@ -214,7 +215,8 @@
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" style="max-width: 3%">                Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht
+                <img src="../../testImages/lightbulb.png" style="max-width: 3%"> Unsere Augen sind Lichtempfänger. Wir
+                sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
             </div>
