example.html: - Tim is no longer a Table!

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -26,32 +26,34 @@
 
 <div class="chapter">
 
-    <table>
-        <tr class="section">
-            <td class="text table-bottom">Das ist Tim.</td>
-            <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>
-        </tr>
-        <tr class="section">
-            <td class="text">
-                <button class="reading">Vorlesen</button>
-                <br>
-                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
-                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
-                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
-            </td>
-        </tr>
-    </table>
-    <!--        <div class="text wrap-text">-->
-    <!--        </div>-->
-    <!--        <div class="section">-->
-    <!--            <div class="text wrap-text">-->
+    <!--    <table>-->
+    <!--        <tr class="section">-->
+    <!--            <td class="text table-bottom">Das ist Tim.</td>-->
+    <!--            <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>-->
+    <!--        </tr>-->
+    <!--        <tr class="section">-->
+    <!--            <td class="text">-->
+    <!--                <button class="reading">Vorlesen</button>-->
+    <!--                <br>-->
     <!--                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.-->
     <!--                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.-->
     <!--                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.-->
-    <!--            </div>-->
-    <!--        </div>-->
-
-    <!--    </div>-->
+    <!--            </td>-->
+    <!--        </tr>-->
+    <!--    </table>-->
+    <div class="clearfix">
+        <div class="section">
+            <img class="wrap-figure tim" src="../../testImages/tim.png" alt="">
+            <div class="text">Das ist Tim.</div>
+        </div>
+        <div class="section">
+            <button class="reading">Vorlesen</button>
+            <div class="text">
+                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe. Er hat oft
+                Kopfschmerzen. Ständig kneift er die Augen zusammen. Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="section">
