HelloController.java: - added JSBridge functionality JSBridge.java: - added Bridge to call Java from Javascript example.html: - now calls Java function - "TEMPORÄR" part now commented out

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -19,9 +19,7 @@
         function getContainer() {
             return document.querySelectorAll(".section,.information");
         }
-        function disablePreamble() {
-            document.getElementById('preamble').setAttribute('style','display:none');
-        }
+
     </script>
 </head>
 
@@ -31,7 +29,7 @@
     <div class="text">
         Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
     </div>
-    <button class="nav-button" onclick="disablePreamble()">Verstanden!</button>
+    <button class="nav-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
 </div>
 <div class="chapter">
 
@@ -235,11 +233,11 @@
     </div>
 </div>
 
-<div>-------TEMPORÄR--------</div>
-<h2>This is Html content</h2>
-<b>Enter Color:</b>
-<input id='color' value='yellow'/>
-<button onclick='changeBgColor();'>Change Bg Color</button>
+<!--<div>-&#45;&#45;&#45;&#45;&#45;&#45;TEMPORÄR&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</div>-->
+<!--<h2>This is Html content</h2>-->
+<!--<b>Enter Color:</b>-->
+<!--<input id='color' value='yellow'/>-->
+<!--<button onclick='changeBgColor();'>Change Bg Color</button>-->
 
 </body>
 </html>
