Draggable Cards design

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -113,8 +113,10 @@
     </div>
     <div class="section">
         <div class="task">
-            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
-            Lederhaut</b>
+            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
+            <div class="draggable-card">Iris</div>
+            <div class="draggable-card">Pupille</div>
+            <div class="draggable-card">Lederhaut</div>
             <!--TODO: Wie werden Begriffe platziert?        -->
         </div>
         <div class="task-image">
