--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
     <link rel="stylesheet" href="../../css/learningUnit.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script>
         function changeBgColor() {
@@ -68,7 +67,7 @@
         Warum soll Tim zum Augenarzt gehen? Schreibe auf.
     </div>
 
-    <i class="fa fa-keyboard-o" style="font-size:36px"></i>
+    <img src="../../testImages/keyboard.png" style="max-width:150px">
     <br>
     <form>
         <label>
