Draggable Cards design

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -113,7 +113,7 @@
     </div>
     <div class="section">
         <div class="task">
-            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
+            <img src="../../Icons/Draggable-Card.svg" class="task-icon"/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
             <div class="draggable-card">Iris</div>
             <div class="draggable-card">Pupille</div>
             <div class="draggable-card">Lederhaut</div>
@@ -128,7 +128,7 @@
         <div class="clearfix">
             <div class="section">
                 <div class="text ">
-                    <img src="../../testImages/lightbulb.png" style="max-width: 3%">
+                    <img src="../../testImages/lightbulb.png" class="task-icon">
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
