removes inline style from icons

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -187,7 +187,7 @@
     <div class="information">
         <div class="section">
             <div class="text wrap-text">
-                <img src="../../testImages/lightbulb.png" style="max-width: 3%; height: 3%">
+                <img src="../../testImages/lightbulb.png" class="task-icon">
                 Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
@@ -225,7 +225,7 @@
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" style="max-width: 3%"> Unsere Augen sind Lichtempfänger. Wir
+                <img src="../../testImages/lightbulb.png" class="task-icon"> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
