trying to fix lightbulb

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -225,7 +225,7 @@
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" class="task-icon"> Unsere Augen sind Lichtempfänger. Wir
+                <img src="../../testImages/lightbulb.png" class="task-icon"/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
