--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
@@ -67,7 +67,7 @@
         Warum soll Tim zum Augenarzt gehen? Schreibe auf.
     </div>
 
-    <img src="../../testImages/keyboard.png" style="max-width:180px">
+    <img src="../../testImages/keyboard.png" style="max-width:100px" alt="">
     <br>
     <form>
         <label>
@@ -112,7 +112,7 @@
     </div>
     <div class="section">
         <div class="task">
-            <img src="../../Icons/Draggable-Card.svg" class="task-icon"/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
+            <img src="../../Icons/Draggable-Card.svg" class="task-icon" alt=""/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
             <div class="draggable-card">Iris</div>
             <div class="draggable-card">Pupille</div>
             <div class="draggable-card">Lederhaut</div>
@@ -127,22 +127,18 @@
         <div class="clearfix">
             <div class="section">
                 <div class="text ">
-                    <img src="../../testImages/lightbulb.png" class="task-icon">
+                    <img src="../../testImages/lightbulb.png" class="task-icon" alt="1">
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
-                <div class="diashow-image" target="diashow1">
-                    <img src="../../testImages/Aufbau_Auge.png"/>
+                <div class="diashow-image">
+                    <img src="../../testImages/Aufbau_Auge.png" alt="1"/>
                 </div>
                 <div class="diashow-target" id="diashow1">
-                    <img src="../../testImages/Aufbau_Auge.png"/>
-                    <!--        TODO: Beschriftung entfernen in diesem Bild-->
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
-                    <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
-                    <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                    <img src="../../testImages/Aufbau_Auge.png" alt="1"/>
+                    <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png" alt="1"/>
+                    <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png" alt="1"/>
                     <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
-                    <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 </div>
             </div>
             <div class="section">
@@ -181,13 +177,13 @@
             ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz
             einfach
             finden kann.<br>
-            <img src="../../testImages/Taschenlampe.png"/>
+            <img src="../../testImages/Taschenlampe.png" alt="1"/>
         </div>
     </div>
     <div class="information">
         <div class="section">
             <div class="text wrap-text">
-                <img src="../../testImages/lightbulb.png" class="task-icon">
+                <img src="../../testImages/lightbulb.png" class="task-icon" alt="">
                 Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
@@ -218,14 +214,14 @@
             Richtung der Lichtstrahl geht.<br>
         </div>
         <div class="task-image">
-            <img src="../../testImages/Tim_Taschenlampe.png"/>
-            <img src="../../testImages/Tür.png"/>
+            <img src="../../testImages/Tim_Taschenlampe.png" alt=""/>
+            <img src="../../testImages/Tür.png" alt=""/>
         </div>
     </div>
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" class="task-icon"/> Unsere Augen sind Lichtempfänger. Wir
+                <img src="../../testImages/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
