--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -112,7 +112,8 @@
     </div>
     <div class="section">
         <div class="task">
-            <img src="../../Icons/Draggable-Card.svg" class="task-icon" alt=""/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
+            <img src="../../Icons/Draggable-Card.svg" class="task-icon" alt=""/>
+            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
             <div class="draggable-card">Iris</div>
             <div class="draggable-card">Pupille</div>
             <div class="draggable-card">Lederhaut</div>
@@ -127,18 +128,18 @@
         <div class="clearfix">
             <div class="section">
                 <div class="text ">
-                    <img src="../../testImages/lightbulb.png" class="task-icon" alt="1">
+                    <img src="../../testImages/lightbulb.png" class="task-icon" alt="">
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
                 <div class="diashow-image">
-                    <img src="../../testImages/Aufbau_Auge.png" alt="1"/>
+                    <img src="../../testImages/Aufbau_Auge.png" alt=""/>
                 </div>
                 <div class="diashow-target" id="diashow1">
-                    <img src="../../testImages/Aufbau_Auge.png" alt="1"/>
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png" alt="1"/>
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png" alt="1"/>
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
+                    <img src="../../testImages/Aufbau_Auge.png" alt=""/>
+                    <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
+                    <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
+                    <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
                 </div>
             </div>
             <div class="section">
@@ -177,7 +178,7 @@
             ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz
             einfach
             finden kann.<br>
-            <img src="../../testImages/Taschenlampe.png" alt="1"/>
+            <img src="../../testImages/Taschenlampe.png" alt=""/>
         </div>
     </div>
     <div class="information">
