--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -81,7 +81,7 @@
 <div class="chapter">
     <div class="section">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
-        <img class="eye-small" src="../../testImages/Auge_Klein.png" alt="1"/>
+        <img class="eye-small" src="../../testImages/Auge_Klein.png" alt=""/>
         <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
     </div>
     <div class="watermark">
@@ -188,7 +188,7 @@
                 Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
-                <img class="wrap-figure" src="../../testImages/Wald.png" alt="1"/>
+                <img class="wrap-figure" src="../../testImages/Wald.png" alt=""/>
             </div>
         </div>
     </div>
