--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
-    <link rel="stylesheet" href="../../css/learningUnit.css">
+    <link rel="stylesheet" href="css/learningUnit.css">
 
     <script>
         function changeBgColor() {
@@ -49,7 +49,7 @@
     <!--    </table>-->
     <div class="clearfix">
         <div class="section">
-            <img class="wrap-figure tim" src="../../testImages/tim.png" alt="">
+            <img class="wrap-figure tim" src="testImages/tim.png" alt="">
             <div class="text">Das ist Tim.</div>
         </div>
         <div class="section">
@@ -81,7 +81,7 @@
 <div class="chapter">
     <div class="section">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
-        <img class="eye-small" src="../../testImages/Auge_Klein.png" alt="1"/>
+        <img class="eye-small" src="testImages/Auge_Klein.png" alt="1"/>
         <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
     </div>
     <div class="watermark">
@@ -112,14 +112,14 @@
     </div>
     <div class="section">
         <div class="task">
-            <img src="../../Icons/Draggable-Card.svg" class="task-icon"/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
+            <img src="Icons/Draggable-Card.svg" class="task-icon"/>Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
             <div class="draggable-card">Iris</div>
             <div class="draggable-card">Pupille</div>
             <div class="draggable-card">Lederhaut</div>
             <!--TODO: Wie werden Begriffe platziert?        -->
         </div>
         <div class="task-image">
-            <img src="../../testImages/Auge_Groß.png" alt=""/>
+            <img src="testImages/Auge_Groß.png" alt=""/>
         </div>
     </div>
     <br>
@@ -127,21 +127,21 @@
         <div class="clearfix">
             <div class="section">
                 <div class="text ">
-                    <img src="../../testImages/lightbulb.png" class="task-icon">
+                    <img src="testImages/lightbulb.png" class="task-icon">
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
                 <div class="diashow-image" target="diashow1">
-                    <img src="../../testImages/Aufbau_Auge.png"/>
+                    <img src="testImages/Aufbau_Auge.png"/>
                 </div>
                 <div class="diashow-target" id="diashow1">
-                    <img src="../../testImages/Aufbau_Auge.png"/>
+                    <img src="testImages/Aufbau_Auge.png"/>
                     <!--        TODO: Beschriftung entfernen in diesem Bild-->
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+                    <img src="testImages/Aufbau_Auge_Beschriftung_1.png"/>
                     <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+                    <img src="testImages/Aufbau_Auge_Beschriftung_2.png"/>
                     <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-                    <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
+                    <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt="1"/>
                     <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 </div>
             </div>
@@ -181,17 +181,17 @@
             ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz
             einfach
             finden kann.<br>
-            <img src="../../testImages/Taschenlampe.png"/>
+            <img src="testImages/Taschenlampe.png"/>
         </div>
     </div>
     <div class="information">
         <div class="section">
             <div class="text wrap-text">
-                <img src="../../testImages/lightbulb.png" class="task-icon">
+                <img src="testImages/lightbulb.png" class="task-icon">
                 Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
-                <img class="wrap-figure" src="../../testImages/Wald.png" alt="1"/>
+                <img class="wrap-figure" src="testImages/Wald.png" alt="1"/>
             </div>
         </div>
     </div>
@@ -218,14 +218,14 @@
             Richtung der Lichtstrahl geht.<br>
         </div>
         <div class="task-image">
-            <img src="../../testImages/Tim_Taschenlampe.png"/>
-            <img src="../../testImages/Tür.png"/>
+            <img src="testImages/Tim_Taschenlampe.png"/>
+            <img src="testImages/Tür.png"/>
         </div>
     </div>
     <div class="information">
         <div class="section">
             <div class="text">
-                <img src="../../testImages/lightbulb.png" class="task-icon"/> Unsere Augen sind Lichtempfänger. Wir
+                <img src="testImages/lightbulb.png" class="task-icon"/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
